cmake_minimum_required(VERSION 2.8)

project ( SimpleClient CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleClient ${SRC})
target_link_libraries(SimpleClient Qt5::Core)
target_link_libraries(SimpleClient Qt5::Gui)
target_link_libraries(SimpleClient Utility)
target_link_libraries(SimpleClient Networking)
target_link_libraries(SimpleClient TcpNetworking)
target_link_libraries(SimpleClient AssetInterfaces)
target_link_libraries(SimpleClient AssetGenerics)
target_link_libraries(SimpleClient Assets)
target_link_libraries(SimpleClient Wavefront)
target_link_libraries(SimpleClient QImageLoader)
