cmake_minimum_required(VERSION 2.8)

project ( SimpleServer CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(SimpleServer ${SRC})
target_link_libraries(SimpleServer Qt5::Core)
target_link_libraries(SimpleServer Qt5::Gui)
target_link_libraries(SimpleServer Utility)
target_link_libraries(SimpleServer Networking)
target_link_libraries(SimpleServer TcpNetworking)
target_link_libraries(SimpleServer AssetInterfaces)
target_link_libraries(SimpleServer AssetGenerics)
target_link_libraries(SimpleServer Assets)
target_link_libraries(SimpleServer Wavefront)
target_link_libraries(SimpleServer QImageLoader)
